--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "@ai-sdk/openai": "^2.0.0-beta.1",
     "@prisma/client": "^6.10.1",
     "ai": "^5.0.0-beta.1",
+    "autoevals": "^0.0.130",
     "braintrust": "^0.0.208",
     "dotenv": "^16.5.0",
-    "evals": "^1.0.7",
     "pdf-lib": "^1.17.1",
     "zod": "^3.25.67"
   },
